# EZScholarSearch

./: .gitignore  API_Reference.md  API_References.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
API Reference/: AI Module.md  datastructs Module.md  mcps Module.md  search Module.md  search.md  utils Module.md
cookies tool/: cookies_check.py  transform_json.py
example test scripts/: test_module_ai.py  test_module_mcps.py  test_module_search.py  test_module_utils.py  test_text.txt  test_text2.txt
ezscholarsearch/: AI.py  __init__.py  datastructs.py  mcps.py  search.py  utils.py
